# back-investigaci-n-vehiculos

./: .dockerignore  .env.example  .gitignore  .pylintrc  AGENTS.md  Dockerfile  FLUJO_UPLOAD_DOCUMENTOS.md  GIT_SETUP.md  GUIA_CREDENCIALES_GOOGLE.md  IMPLEMENTACION_COMPLETA_FASES_1_4.md  IMPLEMENTACION_FASE_1_2.md  IMPLEMENTACION_FINAL.md  PLAN_GOOGLE_DRIVE_COMPLETO.md  PUSH_INSTRUCTIONS.md  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  railway.toml  render.yaml  requirements.txt  vehiculos_final.xlsx - Vehículos.csv
.github/workflows/: ci.yml  deploy.yml
alembic/: README  env.py
alembic/versions/: 1f60f7815f05_adapt_documentos_procesados_to_local_.py  add_duplicado_estado_documento.py  add_visitas_direcciones.py  c0820e85296d_initial_schema.py  e198791a2934_create_documentos_procesados.py  remove_unique_vehiculo.py
doc/: cursor_an_lisis_de_documentaci_n_backen.md  cursor_guide_part1.md  cursor_guide_part2.md  cursor_guide_part3.md  cursor_guide_part4.md  cursor_guide_part5_shared_kernel.md  cursor_guide_part6_shared_infrastructure.md
docs/: ANALISIS_CONFTEST_SUGGESTION.md  API.md  API_COMPLETA_FRONTEND.md  API_DOCUMENTATION.md  API_ENDPOINTS.md  API_ENDPOINTS_COMPLETA.md  CI_PIPELINE_ANALYSIS.md  CI_TEST_FIX.md  DEPLOYMENT.md  DEPLOY_STRATEGY.md  DEVELOPMENT.md  DIAGNOSTICO_BOOSTR.md  FLUJO_DEPLOY.md  FRONTEND_INTEGRATION.md  GITHUB_ACTIONS_DEPLOY.md  MVP_STATUS.md  NEON_SETUP.md  POSTGRESQL_17.md  RENDER_DEPLOYMENT.md  RENDER_PYTHON_VERSION.md  SECRET_KEY_EXPLANATION.md  TESTING.md  TESTSPRITE_SETUP.md  TEST_FIXES_NEEDED.md  WHY_SYNC_DATABASE.md
scripts/: coverage_report.ps1  coverage_report.sh  create_investigador.py  generate_secret_key.py  render-build.sh  run_tests.ps1  run_tests.sh  run_tests_integration.ps1  run_tests_integration.sh  run_tests_unit.ps1  run_tests_unit.sh  seed_admin.py  seed_vehiculos.py  setup_env_neon.py  setup_neon.py  test_boostr_api.py  test_db_connection.py  verify_tables.py
src/: main.py
src/core/: config.py  logging_config.py
src/modules/buffets/application/dtos/: __init__.py  buffet_dto.py
src/modules/buffets/application/interfaces/: __init__.py  buffet_repository.py
src/modules/buffets/application/use_cases/: __init__.py  create_buffet.py  get_buffet.py  update_buffet.py
src/modules/buffets/domain/entities/: __init__.py  buffet.py
src/modules/buffets/domain/exceptions/: __init__.py  buffet_exceptions.py
src/modules/buffets/infrastructure/models/: __init__.py  buffet_model.py
src/modules/buffets/infrastructure/repositories/: __init__.py  buffet_repository.py
src/modules/buffets/presentation/: __init__.py
src/modules/buffets/presentation/routers/: __init__.py  buffet_router.py
src/modules/buffets/presentation/schemas/: __init__.py  buffet_schemas.py
src/modules/investigaciones/application/dtos/: __init__.py  investigacion_dto.py
src/modules/investigaciones/application/interfaces/: __init__.py  investigacion_repository.py
src/modules/investigaciones/application/use_cases/: __init__.py  timeline.py
src/modules/investigaciones/presentation/: __init__.py
src/modules/notificaciones/presentation/: __init__.py
src/modules/oficios/presentation/: __init__.py
src/modules/usuarios/presentation/: __init__.py
src/shared/application/events/: __init__.py  event.py  event_bus.py
src/shared/application/interfaces/: __init__.py  repository.py  unit_of_work.py
src/shared/domain/: __init__.py  enums.py
src/shared/domain/entities/: __init__.py  base_entity.py
src/shared/domain/exceptions/: __init__.py  domain_exceptions.py
src/shared/domain/value_objects/: __init__.py  email.py  patente.py  rut.py
src/shared/infrastructure/database/: __init__.py  base.py  models_registry.py  session.py  unit_of_work.py
src/shared/infrastructure/external_apis/: __init__.py
src/shared/infrastructure/services/: __init__.py  file_storage.py  pdf_processor.py
src/shared/presentation/dependencies/: __init__.py  auth.py  pagination.py
src/shared/presentation/middleware/: __init__.py  error_handler.py  logging_middleware.py
tasks/workers/: process_document_pair.py  process_drive_document_pair.py
tests/: conftest.py
tests/fixtures/: __init__.py
tests/integration/api/: __init__.py  test_auth.py  test_buffets.py  test_document_upload.py  test_investigaciones.py  test_notificaciones.py  test_oficios.py
tests/modules/investigaciones/presentation/: test_boostr_debug_endpoint.py
tests/unit/: __init__.py
tests/unit/modules/: __init__.py
tests/unit/modules/oficios/: __init__.py
tests/unit/modules/usuarios/: __init__.py
tests/unit/shared/: __init__.py  test_value_objects.py
tests/unit/workers/: __init__.py  test_process_document_pair.py
tests/utils/: __init__.py  helpers.py
testsprite_tests/: TC001_register_new_user_with_valid_data.py  TC002_login_user_with_correct_credentials.py  TC003_get_current_user_with_valid_token.py  TC004_create_buffet_as_admin_user.py  TC005_list_buffets_with_pagination_and_active_filter.py  TC006_update_buffet_as_admin_user.py  TC007_soft_delete_buffet_as_admin_user.py  TC008_list_oficios_with_filters_and_pagination.py  TC009_register_visit_to_address_with_valid_data.py  TC010_query_vehicle_information_from_boostr_api.py  standard_prd.json  testsprite-mcp-test-report.html  testsprite-mcp-test-report.md
(+121 files in other folders)
